-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0.0, 6.1
-
None
-
-
3
-
ac890e6ca577dc6c37d71c21975c20b9b6b45045 (qt/qtquick3d/dev) 4659266aee531ebb698b4cfc57cce11ebe004e07 (qt/qtquick3d/6.1)
-
Qt Quick 3D - 2021 Week 11/12
If a SpotLight is directed to a model with PBR material the light spot doesn't look correct.
See the attached image.
To reproduce:
1) open "Light example"
2) add to each Model with source: "#Rectangle" this material:
PrincipledMaterial
{
baseColor: "#999944"
metalness: 0.9
roughness: 0.2
}
Another problem is the intersection line of 2 spotlights, light should be twice as intensive there but instead it falls (see example3 image). This problem is reproducible with DefaultMaterial.
| For Gerrit Dashboard: QTBUG-89946 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 338972,3 | Make spot lights' attenuation to influence specular lights | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 340425,2 | Make spot lights' attenuation to influence specular lights | 6.1 | qt/qtquick3d | Status: MERGED | +2 | 0 |