Make spot lights' attenuation to influence specular lights

Fixes: QTBUG-89946
Pick-to: 6.1
Change-Id: I94b36eac21ea8ab183525741f505aa7f6f39fff7
Reviewed-by: Andy Nichols <andy.nichols@qt.io>